@@ -21,7 +21,6 @@ extern "C" {
 #include <libavcodec/avcodec.h>
 #include <libavformat/avformat.h>
 #include <libswscale/swscale.h>
-#include <libpostproc/postprocess.h>
 }
 #include "ffmpeg.h"
 #include "ffmpeg_content.h"
