@@ -69,7 +69,8 @@ enum VideoFrameType
 {
 	VIDEO_FRAME_TYPE_2D,
 	VIDEO_FRAME_TYPE_3D_LEFT_RIGHT,
-	VIDEO_FRAME_TYPE_3D_TOP_BOTTOM
+	VIDEO_FRAME_TYPE_3D_TOP_BOTTOM,
+	VIDEO_FRAME_TYPE_3D_ALTERNATE
 };
 
 enum Eyes
